--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,12 @@
 	margin-top: 100px;
 }
 .block {
-	font-size: 40px;
+	font-size: 50px;
+	font-weight: bold;
+}
+.damage {
+	font-size: 30px;
+	font-weight: bold;
 }
 
 body {
